# RHH-Ports

./: .gitignore  README.md  fp.cpp  normalize.py
.github/scripts/: generate_ports.js
.github/workflows/: build_pharos.yml  build_ports.yml  build_runtimes.yml  collect_ports.yml  collect_runtimes.yml  collect_screenshots.yml  update_hm64.yml
.s3air-tmp/: Application.cpp  CI.cpp  Configuration.cpp  Configuration.h  EngineMain.cpp  LSP.cpp  MS.cpp  Simulation.cpp  pb.cpp
buildtools/: Dockerfile.base  README.md  WSL2-CHROOT.md  build_port.sh  docker-setup.sh  registry.json
buildtools/dusk/src/: Dockerfile  build.txt  retrieve-products.txt
buildtools/dusklight/src/: Dockerfile  build.txt  retrieve-products.txt
buildtools/gmloadernext/: .gitignore  .upstream-sha
buildtools/gmloadernext/src/: Dockerfile  build.txt  retrieve-products.txt
buildtools/pharos/: build.sh  requirements.txt
buildtools/pharos/app/: autoinstall.py  config.py  daemon.py  download.py  input.py  main.py  paths.py  pharos-daemon.py  pharos.py  service.py  ui.py  update.py
buildtools/sonic-cd/sonic-cd/: .gitignore
buildtools/sonic-cd/sonic-cd/src/: Dockerfile  build.txt  retrieve-products.txt
buildtools/sonic-mania/sonic-mania/src/: Dockerfile  build.txt
buildtools/sonic/rsdkv5u/rsdkv5u/: LICENSE  README.md  patch-gameconfig.c  rsdkv5u-extract.c  wav-normalize.c  wav-speed.c
buildtools/sonic2013/sonic2013/src/: build.txt
buildtools/sonic3air/sonic3air/src/: Dockerfile  build.txt  docker-setup.txt  retrieve-products.txt
buildtools/yyg_qoi_decode/: CMakeLists.txt  README.md  yyg_qoi_decode.cpp
buildtools/yyg_qoi_decode/cmake/: aarch64-linux-gnu.cmake
docs/: index.html  loadports.js  ports.json  style.css  work-with-me.html  work-with-me.md
docs/devlog/: 2026-05-18-dusklight-opengles.md  2026-05-27-gmtoolkit.md  index.json
ports/released/RomM/RomM/: port.json
ports/released/apps/droidtoolbox/: Droid Toolbox.sh
ports/released/apps/pharos/: Pharos App.sh
ports/released/apps/pksinew/: PKsinew.sh
ports/released/apps/steamlink/: SteamLink.sh
ports/released/doomengines/: Doom Engines.sh
ports/released/momodora_rutm/: Momodora RUtM.sh
ports/released/pkmn_fireash/: Pokemon Fire Ash.sh
ports/released/shipofharkinian/: README.md  Ship of Harkinian.sh  port.json
ports/released/simpsons_hnr/: The Simpsons Hit and Run.sh
ports/released/smb1r/: README.md  Super Mario Bros Remastered.sh  port.json
ports/released/steamlink/: SteamLink.sh
ports/released/unleashedrecomp/: Sonic Unleashed Recompiled.sh
ports/released/valleycore/: Stardew Valley (Valleycore).sh
ports/released/zelda-dusk/: Zelda-Dusk.sh
ports/released/zelda-dusklight/: Zelda-Dusklight.sh
ports/released/zelda-ladxhd/: Zelda LADXHD.sh
ports/templates/gmloadernext/: Portname.sh
ports/unreleased/benbowars/: BenboWARS.sh
ports/unreleased/digitaltamers2/: Digital Tamers 2.sh
ports/unreleased/digiviceemu/: Digivice Emulator.sh
ports/unreleased/soniccolorsdemastered/: Sonic Colors Demastered.sh
ports/unreleased/tearscape/: Tearscape.sh
ports/unreleased/theforceengine/: Star Wars - The Force Engine.sh
ports/unreleased/tinymon/: Tinymon.sh
ports/unreleased/zelda2enhanced/: Zelda II Enhanced.sh
runtimes/: gmloadernext.squashfs
(+728 files in other folders)
